# DreamMotion

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  NEXT_STEPS.md  README.md  pyproject.toml
.cache/depthai/crashdumps/1f6818c13ca2913cfd958fa16fe2c22c96b7fbfc/: crash_dump.json
.cache/depthai/crashdumps/9b6a7995c977095911e7b77c7369c078704bc3d0/: crash_dump.json
.cache/depthai/crashdumps/a5b954062e2f321e3e6fd701b18090a87ff3c94c/: crash_dump.json
.cache/depthai/crashdumps/cd4029c144d2a739444012083fc87d0d6ab88127/: crash_dump.json
.cache/depthai/crashdumps/e2d056d4835d62efe68d0eda2d2f03822845137a/: crash_dump.json
.cache/depthai/crashdumps/e4686f61188e3a22fd5db280498bd7416016be78/: crash_dump.json
config/: camera_to_base.json
devtools/: lint.py
docs/: development.md  sim2real.md  sim2sim.md  web-ui.md
kimodo-server/: .gitignore  Dockerfile.api  README.md  docker-compose.yaml  setup.sh
kimodo-server/api/: CSV_TO_MOTIONLIB_GUIDE.md  csv_to_motionlib.py  dof_constraints.py  server.py
scripts/: live_detection.py  run_sim.py  text2motion_hy.ipynb
src/: main.py
src/agent/: agent.py  cli.py  prompt_refiner.py
src/agent/tools/: generate_motion.py  treasure_hunt.py
src/deploy/: agent_tracker_policy.py  configs.py  run.py
src/g1/: __main__.py  agent.py  prompt_refiner.py  publisher.py  unitree_common.py
src/g1/arm/: arm_controller.py
src/g1/audio/: __init__.py  client.py  diagnostics.py  tool.py
src/g1/locomotion/: __init__.py  kimodo_controller.py  sdk_controller.py
src/g1/speech_input/: __init__.py  config.py  microphone.py  session.py  transcriber.py
src/g1/stance/: __init__.py  controller.py
src/g1/state_machine/: __init__.py  machine.py  types.py
src/g1/tools/: generate_motion.py
src/g1/transforms/: __init__.py  math.py  odometry.py  service.py  static.py
src/g1/vision/: __init__.py  calibrate_chessboard.py  calibration.json  camera.py  capture_chessboard.py  detector.py  live_prompt_detector.py
src/unitree_cpp/: __init__.py
src/web/: agent_runner.py  server.py
src/web/static/: app.js  g1_description  style.css
src/web/templates/: index.html  viewer.html
tests/hardware/: test_calibration.py  test_camera.py  test_e2e.py  test_locomotion.py  test_sdk_openloop.py
tests/unit/: test_state_machine_mock.py  test_transforms_math.py  test_treasure_hunt_state_machine.py
text2motion_hy/: text2motion_hy.ipynb
