[project]
name = "g1-voice2motion"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "strands-agents[openai]",
    "httpx",
    "openai",
    "python-dotenv",
    "sounddevice",
    "tyro",
    "fastapi",
    "uvicorn",
]

[project.scripts]
agent = "main:main"
deploy = "deploy.run:main"
web = "web.server:main"

[project.optional-dependencies]
deploy = ["robojudo", "mujoco-python-viewer"]
tts = ["unitree-sdk2py"]

[tool.uv.sources]
robojudo = { path = "../RoboJuDo", editable = true }
unitree-sdk2py = { path = "../unitree_sdk2_python", editable = true }

[dependency-groups]
dev = [
    "ruff",
    "basedpyright",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent", "src/g1", "src/deploy", "src/web"]

[tool.hatch.build.targets.wheel.force-include]
"src/main.py" = "main.py"

[tool.ruff]
target-version = "py311"
src = ["src", "devtools", "scripts"]
line-length = 88
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific
    "FA",  # flake8-future-annotations
    "PTH", # flake8-use-pathlib
]

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = ["src", "devtools", "scripts"]
exclude = ["**/*.ipynb"]
